removed dependency to jq command

--- a/userparameter_meminfo.conf
+++ b/userparameter_meminfo.conf
@@ -1,11 +1,10 @@
 # Linux memory statistics from /proc/meminfo
-#  required command: cat,sed,awk,jq
+#  required command: cat,sed,awk
 
 
-UserParameter=meminfo.discovery,cat /proc/meminfo |sed -e "s/(\(.*\))/_\1/" |awk -F":" '{print "{\"{#PROCMEMITEM}\":\""$1"\"}"} ' |jq -c -M -s '. | { "data":. } '
+UserParameter=meminfo.discovery,cat /proc/meminfo |sed -e "s/(\(.*\))/_\1/" |awk -F":" 'BEGIN{print "{ \"data\": ["}  {printf comma"{\"{#PROCMEMITEM}\":\""$1"\"}"; comma=", "} END{print "] }"}'
 
 UserParameter=meminfo.value[*],cat /proc/meminfo |sed -e "s/: \+/ /" -e "s/(\(.*\))/_\1/" |awk '$$1=="$1" {if($$3=="kB"){$$2*=1024}; print $$2}'
 
-UserParameter=meminfo.master,cat /proc/meminfo |sed -e "s/: \+/ /" -e "s/(\(.*\))/_\1/" |awk '{if($3=="kB"){$2*=1024;$3=""}; print "{\""$1"\":"$2"}"}' |jq -c -M -s '. |add '
-
+UserParameter=meminfo.master,cat /proc/meminfo |sed -e "s/: \+/ /" -e "s/(\(.*\))/_\1/" |awk 'BEGIN{printf "{"} {if($3=="kB"){$2*=1024;$3=""}; printf comma"\""$1"\":"$2; comma=", "} END{print "}"}'
 
