removed unnecessary new line in output Json at meminfo.discovery

--- a/userparameter_meminfo.conf
+++ b/userparameter_meminfo.conf
@@ -2,7 +2,7 @@
 #  required command: cat,sed,awk
 
 
-UserParameter=meminfo.discovery,cat /proc/meminfo |sed -e "s/(\(.*\))/_\1/" |awk -F":" 'BEGIN{print "{ \"data\": ["}  {printf comma"{\"{#PROCMEMITEM}\":\""$1"\"}"; comma=", "} END{print "] }"}'
+UserParameter=meminfo.discovery,cat /proc/meminfo |sed -e "s/(\(.*\))/_\1/" |awk -F":" 'BEGIN{printf "{ \"data\": ["}  {printf comma"{\"{#PROCMEMITEM}\":\""$1"\"}"; comma=", "} END{print "] }"}'
 
 UserParameter=meminfo.value[*],cat /proc/meminfo |sed -e "s/: \+/ /" -e "s/(\(.*\))/_\1/" |awk '$$1=="$1" {if($$3=="kB"){$$2*=1024}; print $$2}'
 
